fix horizontal scroll

--- a/packages/editor-common/web/statics/styles/general.scss
+++ b/packages/editor-common/web/statics/styles/general.scss
@@ -61,6 +61,10 @@
   max-width: 100%;
 }
 
+.tablePluginContainer {
+  overflow: scroll;
+}
+
 //*** PANEL ***//
 .panelContainer {
   @extend .fontElementMap;
